@@ -495,13 +495,23 @@ class JCache
 			}
 		}
 
+		// Set cached headers.
+		if (isset($data['headers']) && $data['headers'])
+		{
+			foreach($data['headers'] as $header)
+			{
+				JResponse::setHeader($header['name'], $header['value']);
+			}
+		}
+		
+		// The following code searches for a token in the cached page and replaces it with the
+		// proper token.
 		if (isset($data['body']))
 		{
-			// The following code searches for a token in the cached page and replaces it with the
-			// proper token.
-			$token = JSession::getFormToken();
-			$search = '#<input type="hidden" name="[0-9a-f]{32}" value="1" />#';
-			$replacement = '<input type="hidden" name="' . $token . '" value="1" />';
+			$token 			= JSession::getFormToken();
+			$search 		= '#<input type="hidden" name="[0-9a-f]{32}" value="1" />#';
+			$replacement 	= '<input type="hidden" name="' . $token . '" value="1" />';
+			
 			$data['body'] = preg_replace($search, $replacement, $data['body']);
 			$body = $data['body'];
 		}
@@ -522,11 +532,12 @@ class JCache
 	 */
 	public static function setWorkarounds($data, $options = array())
 	{
-		$loptions = array();
-		$loptions['nopathway'] = 0;
-		$loptions['nohead'] = 0;
-		$loptions['nomodules'] = 0;
-		$loptions['modulemode'] = 0;
+		$loptions = array(
+			'nopathway' 	=> 0,
+			'nohead' 		=> 0,
+			'nomodules' 	=> 0,
+			'modulemode' 	=> 0,
+		);
 
 		if (isset($options['nopathway']))
 		{
@@ -551,17 +562,20 @@ class JCache
 		$app = JFactory::getApplication();
 		$document = JFactory::getDocument();
 
-		// Get the modules buffer before component execution.
-		$buffer1 = $document->getBuffer();
-		if (!is_array($buffer1))
+		if ($loptions['nomodules'] != 1)
 		{
-			$buffer1 = array();
-		}
-
-		// Make sure the module buffer is an array.
-		if (!isset($buffer1['module']) || !is_array($buffer1['module']))
-		{
-			$buffer1['module'] = array();
+			// Get the modules buffer before component execution.
+			$buffer1 = $document->getBuffer();
+			if (!is_array($buffer1))
+			{
+				$buffer1 = array();
+			}
+	
+			// Make sure the module buffer is an array.
+			if (!isset($buffer1['module']) || !is_array($buffer1['module']))
+			{
+				$buffer1['module'] = array();
+			}
 		}
 
 		// View body data
@@ -639,7 +653,13 @@ class JCache
 			// Compare the second module buffer against the first buffer.
 			$cached['module'] = array_diff_assoc($buffer2['module'], $buffer1['module']);
 		}
-
+		
+		// Headers data
+		if (isset($options['headers']) && $options['headers'])
+		{
+			$cached['headers'] = JResponse::getHeaders();
+		}
+		
 		return $cached;
 	}
 
