@@ -28,6 +28,7 @@ $ -> Language fix or change
 10-Jul-2013 Jean-Marie Simonet
  ^ [#31388] Admin login shows language option. Thanks Brian Teeman
  ^ [#31383] Article manager options. Thanks Brian Teeman
+ # [#30957] System cache issue. Thanks Dennis Hermatski
 
 09-Jul-2013 Jean-Marie Simonet
  $ Updating installation lang files: eo-XX
